@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-05-24T08:13:07Z",
+  "timestamp" : "2022-05-25T08:12:48Z",
   "count_outdated" : 227,
   "uniques_outdated" : 11,
-  "count" : 391,
+  "count" : 388,
   "uniques" : 20,
   "views" : [
     {
       "timestamp": "2022-05-11T00:00:00Z",
-      "count": 60,
+      "count": 57,
       "count_minmax": [ 3, 60 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
